--- a/Freelancing analysis/analysis.ipynb
+++ b/Freelancing analysis/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "[9193 rows x 13 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "177"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
        "[74 rows x 13 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,10 +674,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 74 entries, 97 to 8950\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   projectId              74 non-null     int64  \n",
+      " 1   job_title              74 non-null     object \n",
+      " 2   job_description        74 non-null     object \n",
+      " 3   tags                   74 non-null     object \n",
+      " 4   client_state           74 non-null     object \n",
+      " 5   client_country         74 non-null     object \n",
+      " 6   client_average_rating  74 non-null     float64\n",
+      " 7   client_review_count    74 non-null     int64  \n",
+      " 8   min_price              74 non-null     float64\n",
+      " 9   max_price              74 non-null     float64\n",
+      " 10  avg_price              74 non-null     float64\n",
+      " 11  currency               74 non-null     object \n",
+      " 12  rate_type              74 non-null     object \n",
+      "dtypes: float64(4), int64(2), object(7)\n",
+      "memory usage: 8.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "hi.info()"
+   ]
   }
  ],
  "metadata": {
@@ -696,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
